src/components/background/background.module.css
.background {
  height: 400px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 40px;
}

.background_image {
  width: 1100px;
  height: 400px;
  border-radius: 24px;
  object-fit: cover;
  filter: brightness(70%);
  position: absolute;
}

.message_wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  padding: 40px;
}

.message {
  color: var(--text-white-color);
  font-size: 40px;
  font-weight: 600;
  margin: 0;
  margin-bottom: 20px;
  text-align: center;
  text-wrap: balance;
}

.message_author {
  color: var(--text-white-color);
  font-size: 20px;
  font-weight: 500;
  margin: 0;
  text-align: center;
}

@media (max-width: 1180px) {
  .background_image {
    width: calc(100% - 80px);
  }
}

@media (max-width: 550px) {
  .message {
    font-size: 24px;
  }

  .message_author {
    font-size: 16px;
  }

  .background {
    margin-top: 0;
  }

  .background_image {
    width: 100%;
    border-radius: 0;
  }

  .message_wrap {
    padding: 20px;
  }
}

